# airbyte-connector-models

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  poe_tasks.toml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: pr-welcome-message.md
.github/workflows/: ci.yml  format-check.yml  generate-command.yml  generate.yml  lint-check.yml  nightly-generate.yml  pr-welcome.yml  publish.yml  pypi_publish.yml  pytest-fast.yml  pytest-matrix.yml  release_drafter.yml  slash-command-dispatch.yml  slash-fix.yml
airbyte_connector_models/: __init__.py
airbyte_connector_models/_internal/: __init__.py  base_config.py  base_record.py
airbyte_connector_models/metadata/v0/: ConnectorMetadataDefinitionV0.json  connector_metadata_definition_v0.py
examples/: advanced-smoke-test-metadata.yaml  harvest-example-metadata.yaml  pokeapi-example-metadata.yaml
models/connectors/_internal/: base_record.py
models/metadata/v0/: ConnectorMetadataDefinitionV0.json  airbyte_internal.py  allowed_hosts.py  connector_ipc_options.py  connector_metadata_definition_v0.py  connector_metrics.py  connector_package_info.py  connector_registry_v0.py  connectorbreakingchanges.py  connectorbuildoptions.py  gitinfo.py  jobtype.py  normalization_destination_definition_config.py  releasestage.py  remoteregistries.py  resource_requirements.py  rollout_configuration.py  secretstore.py  sourcefileinfo.py  suggestedstreams.py  (+2 more)
scripts/: bundle-metadata-schemas.js  generate_models.py
src/: validate_examples.py
src/generate/: main.py  metadata_generation.py  utils.py
(+81 files in other folders)
