[project]
name = "airbyte-connector-models"
version = "0.1.0"
description = "Typed Pydantic models for Airbyte connectors"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Airbyte", email = "contact@airbyte.io" }
]
dependencies = [
    "pydantic (>=2.0,<3.0)",
    "airbyte-api (>=0.53.0,<1.0)",
    "airbyte-cdk (>=7.3.9,<8.0.0)",
    "requests (>=2.31.0,<3.0)",
]

[project.urls]
Homepage = "https://github.com/airbytehq/airbyte-connector-models"
Repository = "https://github.com/airbytehq/airbyte-connector-models"

[project.optional-dependencies]
dev = [
    "pytest (>=8.2.0,<9.0)",
    "ruff (>=0.8.2,<1.0)",
    "basedpyright (>=1.0.0,<2.0)",
    "datamodel-code-generator (>=0.25.0,<1.0)",
    "poethepoet (>=0.26.1,<1.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models"]

[tool.poe.tasks]
install = "uv pip install --system -e '.[dev]'"
generate = { shell = """
  # Clone Airbyte monorepo if not present
  if [ ! -d airbyte-monorepo ]; then
    git clone --depth 1 https://github.com/airbytehq/airbyte.git airbyte-monorepo
  fi
  # Set environment variable and run generation script
  export AIRBYTE_MONOREPO_PATH=$(pwd)/airbyte-monorepo
  python scripts/generate_models.py
""" }
autofix = { shell = "ruff format . && ruff check --fix ." }
lock = "uv lock --upgrade"
